Birth date is not modifiable by users and fixed layout bug

--- a/app/assets/stylesheets/users/home.scss
+++ b/app/assets/stylesheets/users/home.scss
@@ -121,3 +121,7 @@ div.clickable > .panel:hover {
 .panel-left.panel-item p.text-center, .panel-right.panel-item p.text-center {
   width: 100%;
 }
+
+.form-control.birthdate {
+  font-weight: normal;
+}
